--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,8 +3,15 @@ plugins {
 }
 
 dependencies {
+    implementation project(':api')
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'net.datafaker:datafaker:2.3.1'
+    
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
+    testImplementation 'org.assertj:assertj-core'
 }
 
 springBoot {
