--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,16 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+image: registry.gitlab.com/rqinnovations/greymatter/devops/images/java:17.0.2_8-jdk-aws
+
 stages:
-- test
-sast:
-  stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  - build
+
+build:
+  stage: build
+  tags:
+    - RQD-CI-K8s
+  script:
+    - ./gradlew build -x test
+  artifacts:
+    paths:
+      - "*/build/libs/"
+    expire_in: 1 hour
+  interruptible: true
